[package]
authors = ["messense <messense@icloud.com>"]
description = "BosonNLP SDK for Rust"
documentation = "https://messense.github.io/bosonnlp-rs"
homepage = "https://github.com/messense/bosonnlp-rs"
keywords = ["nlp", "bosonnlp", "tag", "ner", "sentiment"]
license = "MIT"
name = "bosonnlp"
readme = "README.md"
repository = "https://github.com/messense/bosonnlp-rs"
version = "0.8.1"

[badges]
travis-ci = { repository = "messense/bosonnlp-rs" }

[dependencies]
error-chain = "0.11"
flate2 = "1.0"
hyper = "0.11"
log = "0.3"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.2"

[dependencies.clippy]
optional = true
version = "^0.*"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[features]
unstable = []
