[package]
authors = ["messense <messense@icloud.com>"]
description = "BosonNLP SDK for Rust"
documentation = "https://messense.github.io/bosonnlp-rs"
homepage = "https://github.com/messense/bosonnlp-rs"
keywords = ["nlp", "bosonnlp", "tag", "ner", "sentiment"]
license = "MIT"
name = "bosonnlp"
readme = "README.md"
repository = "https://github.com/messense/bosonnlp-rs"
version = "0.8.2"

[badges]
travis-ci = { repository = "messense/bosonnlp-rs" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
hyper = "0.11"
log = "0.4"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1"

[dependencies.clippy]
optional = true
version = "^0.*"

[dependencies.uuid]
features = ["v4"]
version = "0.6"

[features]
unstable = []
