[package]
authors = ["messense <messense@icloud.com>"]
description = "BosonNLP SDK for Rust"
homepage = "https://github.com/messense/bosonnlp-rs"
keywords = ["nlp", "bosonnlp", "tag", "ner", "sentiment"]
license = "MIT"
name = "bosonnlp"
readme = "README.md"
repository = "https://github.com/messense/bosonnlp-rs"
version = "0.10.2"

[badges]
travis-ci = { repository = "messense/bosonnlp-rs" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
log = "0.4"
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2"

[dependencies.uuid]
features = ["v4"]
version = "0.8"

[features]
unstable = []
